# MiniPremiere

./: .CMakeLists.txt.swp  .gitignore  .travis.yml  CMakeLists.txt  EditableVedio.h  EditableVideo.cpp  LICENSE  MainWindow.cpp  MainWindow.h  Model.h  README.md  View.cpp  extract-qt-installer  install-qt  readme.md  testmodel.cpp
App/: app.cpp  app.h  main.cpp
View/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MySlider.cpp  MySlider.h  View.cpp
View/Notification/: UpdateTimeStampNotification.cpp  UpdateTimeStampNotification.h  UpdateViewNotification.cpp  UpdateViewNotification.h
ViewModel/: .gitignore  CMakeLists.txt  ViewModel.cpp  ViewModel.h  testViewModel.cpp
ViewModel/commands/: FetchQimageCommand.cpp  FetchQimageCommand.h  FrameRateCommand.cpp  FrameRateCommand.h  OpenFileCommand.cpp  OpenFileCommand.h  RefreshTimeStamp.cpp  RefreshTimeStamp.h  openFileCommand.h
common/: command.h  notification.h  parameters.h
doc/: MiniPlayer总体报告.md  个人报告-庞思源.md  个人报告-朱缘明.md  个人报告-雷骁.md  需求分析报告.md
model/: CMakeLists.txt  EditableVideo.cpp  EditableVideo.h  Model.cpp  Model.h  testmodel.cpp
